<resources>
    <!--APP NAME-->
    <string name="app_name">LIBRARIVS</string>

    <!--NAVIGATION BAR-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--Manual Entry Form-->
    <string name="instructionsTitle">Enter your source information in the following fields:</string>
    <string name="authorLastName">Author Last Name</string>
    <string name="authorFirstName">Author First Name</string>
    <string name="bookTitle">Book Title</string>
    <string name="advancedInfo">Advanced Info (optional):</string>
    <string name="bookVol">Vol.</string>
    <string name="bookEd">Ed.</string>
    <string name="bookSeries">Series</string>
    <string name="publicationInfo">Publication Info:</string>
    <string name="bookPublisher">Publisher Name</string>
    <string name="bookCity">City</string>
    <string name="bookYear">Year</string>


    <!--Bibliography Page-->
    <string name="bibliographyBookStandard">
        %1$s, %2$s. <i>%3$s</i>. %4$s: %5$s, %6$s. <!--last, first. title. city: publisher, year.-->
    </string>
    <string name="bibliographyBookAdvanced">
        %1$s, %2$s. <i>%3$s</i>. Ed. %4$s. Vol. %5$s. %6$s: %7$s, %8$s. Print. %9$s. <!--last, first. title. edition. volume. city: publisher, year. series.-->
    </string>


</resources>
