<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.siems.christopher.librarivs.ManualEntryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/manualEntryScrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:fillViewport="false"
        android:background="@color/colorPrimaryOpaque">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/manualEntryLinearLayout">
            <com.siems.christopher.librarivs.BoldTextView
                android:id="@+id/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructionsTitle"
                android:textSize="10pt"
                android:textAlignment="center">
            </com.siems.christopher.librarivs.BoldTextView>
            <com.siems.christopher.librarivs.PrimaryEditText
                android:id="@+id/authorFirstNameEditText"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/authorFirstName"
                android:inputType="textPersonName"
                android:layout_width="fill_parent"
                android:linksClickable="true">
            </com.siems.christopher.librarivs.PrimaryEditText>
            <com.siems.christopher.librarivs.PrimaryEditText
                android:id="@+id/authorLastNameEditText"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/authorLastName"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </com.siems.christopher.librarivs.PrimaryEditText>
            <com.siems.christopher.librarivs.PrimaryEditText
                android:id="@+id/bookTitleEditText"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/bookTitle"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </com.siems.christopher.librarivs.PrimaryEditText>
            <com.siems.christopher.librarivs.BoldTextView
                android:id="@+id/optionalAdvancedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/advancedInfo"
                android:textSize="10pt">
            </com.siems.christopher.librarivs.BoldTextView>

            <com.siems.christopher.librarivs.PrimaryEditText
                android:id="@+id/bookVolEditText"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/bookVol"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </com.siems.christopher.librarivs.PrimaryEditText>
            <com.siems.christopher.librarivs.PrimaryEditText
                android:id="@+id/bookEdEditText"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/bookEd"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </com.siems.christopher.librarivs.PrimaryEditText>
            <com.siems.christopher.librarivs.PrimaryEditText
                android:id="@+id/bookSeriesEditText"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/bookSeries"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </com.siems.christopher.librarivs.PrimaryEditText>
            <com.siems.christopher.librarivs.BoldTextView
                android:id="@+id/publicationInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/publicationInfo"
                android:textSize="10pt">
            </com.siems.christopher.librarivs.BoldTextView>
            <com.siems.christopher.librarivs.PrimaryEditText
                android:id="@+id/publisherEditText"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/bookPublisher"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </com.siems.christopher.librarivs.PrimaryEditText>
            <com.siems.christopher.librarivs.PrimaryEditText
                android:id="@+id/bookCityEditText"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/bookCity"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </com.siems.christopher.librarivs.PrimaryEditText>
            <com.siems.christopher.librarivs.PrimaryEditText
                android:id="@+id/bookYearEditText"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent"
                android:hint="@string/bookYear"
                android:inputType="textPersonName"
                android:layout_width="fill_parent">
            </com.siems.christopher.librarivs.PrimaryEditText>

            <Button
                style="@style/TextAppearance.FontPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:id="@+id/submitNewButton"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimaryDark" />

        </LinearLayout>
    </ScrollView>



</RelativeLayout>
